# superswim

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  Contributing.md  HANDOFF.md  LICENSE  README.md  STYLE.md  SUPERSWIM_KNOWLEDGE.md  dolphin.local.example.json  pyproject.toml
.githooks/: check-comment-length.sh  pre-commit
archive/: ab_pump_seq.txt  analyze_tables.py  boundary.py  boundary2.py  calib_chgexit.py  calib_pumpentry.py  calib_swimwait.py  cos_table.json  debug_cruise.py  debug_prefix.py  dip_sweep.py  fixed_alpha.py  gate_probe.py  gate_trace.py  gen_random_seq.py  phase_inject.py  phase_scan.py  prefix_div.py  probe_fc.py  test_hidip_seq.txt  trace_cruise.py  trace_pump_cruise.py
fixtures/: ab_nopump300k_seq.txt  ab_nopump_seq.txt  ab_synced_seq.txt  boost_search_seq.txt  coldstart_seq.txt  cruise_pump300k_seq.txt  partial_hold77_seq.txt  plan200k_seq.txt  plan3k_exact_seq.txt  pump_seq.txt  pump_seq8.txt  synced200k_seq.txt  synced_seq.txt  test_lowspeed_seq.txt  test_pumptrans_seq.txt
harness/: __init__.py  dolphin_env.py  live.py
knowledge/: CAMERA_MODEL.md  README.md  SWIM_CAMERA_PREDICT_NOTES.md  jp_swim_addrs.md
superswim/: __init__.py  actions.py  coldstart.py  optimize.py  plan.py  sim.py
tests/: cap_camchaos.csv  cap_randcharge.csv  gen_chaos.csv  gen_charge.csv  gen_fullsx.csv  golden_harness.py  golden_regen.py  partial_onaxis_cap.csv  seq_camchaos.txt  seq_gen_charge_202.txt  seq_gen_charge_303.txt  seq_gen_charge_404.txt  seq_randcharge.txt  test_actions.py  test_complicated.py  test_determinism.py  (+7 more)
(+119 files in other folders)
